--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,10 @@
 body {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
-  font-weight: 600;
+  font-weight: normal;
+}
+
+.info-text p {
+    font-style: italic;
+    font-weight: bold;
 }
