--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
-  font-size: 16px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: normal;
+    color: #0f141e;
+    background: #f1f1f1;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: normal;
 }
 
 .info-text p {
     font-style: italic;
     font-weight: bold;
+    color: #86898f;
 }
