--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
+    margin: 0 auto;
     color: #0f141e;
     background: #f1f1f1;
     font-size: 16px;
@@ -12,4 +13,27 @@ body {
     font-style: italic;
     font-weight: bold;
     color: #86898f;
+}
+
+.strong {
+    font-weight: 900;
+    color: rgb(90, 90, 90);
+}
+
+.card {
+    margin: 10px;
+    border: 1px solid grey;
+    border-radius: 10px;
+}
+
+.bg-yellow {
+    background: #fff9dc;
+}
+
+.bg-red {
+    background: #ffe5e5;
+}
+
+.bg-green {
+    background: #e5ffe7;
 }
