--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body {
     margin: 20px auto;
     max-width: 750px;
     padding-top: 30px;
+    margin: 30px;
 }
 .info {
     margin-bottom: 20px;
@@ -66,3 +67,37 @@ body {
 
 }
 
+.link {
+    /* border-style: none; */
+    color: #000;
+    text-decoration: none;
+}
+
+.link:hover {
+    text-decoration: underline;
+    color: red;
+}
+
+.link:visited {
+    color: rgb(96, 95, 95);
+}
+.link:active {
+    color: rgb(37, 151, 22);
+    opacity: 0.7;
+}
+
+
+
+.btn {
+    padding: 15px 20px;
+    background: #0f141e;
+    color: #f1f1f1;
+    border: none;
+    border-radius: 5%;
+    font-family: inherit;
+    cursor: pointer;
+}
+
+.btn:hover {
+    opacity: .8;
+}
