--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,12 @@ body {
 }
 
 .card {
+    
     border: 1px solid grey;
     border-radius: 10px;
     padding: 15px 20px;
     margin-bottom: 20px;
+    /* text-align: center; */
 }
 .card h2 {
     margin-bottom: 10px;
@@ -43,10 +45,10 @@ body {
 }
 
 .container {
-    margin: 20px auto;
+    margin: auto;
     max-width: 750px;
     padding-top: 30px;
-    margin: 30px;
+    margin: auto;
 }
 .info {
     margin-bottom: 20px;
@@ -82,11 +84,23 @@ body {
     color: rgb(96, 95, 95);
 }
 .link:active {
-    color: rgb(37, 151, 22);
+    color: rgb(73, 49, 195);
     opacity: 0.7;
 }
 
 
+.link-list {
+    list-style: none;
+}
+
+.link-list:hover {
+    display: block;
+    list-style: disc;
+    color: red;
+}
+.link-list:hover:active {
+    color: green;
+}
 
 .btn {
     padding: 15px 20px;
@@ -100,4 +114,45 @@ body {
 
 .btn:hover {
     opacity: .8;
+}
+
+.list {
+    margin: 0;
+    padding: 0 30px;
+    list-style: none;
+}
+
+.list li {
+    color: #86898f;
+    margin-bottom: 10px;
+}
+
+.list li:nth-child(odd) {
+    background: #0887521b;
+}
+
+.table {
+    width: 100%;
+}
+
+/* .table thead {
+    background: #91487232;
+} */
+
+.table td {
+    padding: 5px;
+}
+.table tr:nth-child(even) {
+    background: #91487232;
+}
+
+/* table td:nth-child(2) {
+    background: #f33a9734;
+} */
+.table td:nth-child(2) {
+    color: #86898f;
+}
+
+.table td:nth-child(3) {
+    color: #86898f;
 }
