--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,12 @@ body {
 }
 
 .info-text p {
+    font-size: 14px;
     font-style: italic;
     font-weight: bold;
     color: #86898f;
+    margin-bottom: 10px;
+    /* height: 200px; */
 }
 
 .strong {
@@ -24,11 +27,13 @@ body {
     
     border: 1px solid grey;
     border-radius: 10px;
-    padding: 15px 20px;
-    margin-bottom: 20px;
+    padding: 0 30px;
+    margin-bottom: 35px;
     /* text-align: center; */
 }
 .card h2 {
+    padding-top: 0;
+    margin-top: 0;
     margin-bottom: 10px;
 }
 
@@ -52,9 +57,12 @@ body {
 }
 .info {
     margin-bottom: 20px;
+    display: flex;
 }
 .info-text {
-    margin: 0;
+    margin-left: 10px;
+    margin-bottom: 10px;
+
 }
 
 .info-text h4 {
@@ -63,6 +71,7 @@ body {
 
 .avatar {
     width: 200px;
+    height: 200px;
     border-radius: 15px;
     box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
     margin-bottom: 15px;
@@ -73,6 +82,8 @@ body {
     /* border-style: none; */
     color: #000;
     text-decoration: none;
+    padding: 0;
+    margin: 0;
 }
 
 .link:hover {
@@ -91,6 +102,8 @@ body {
 
 .link-list {
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 .link-list:hover {
@@ -124,7 +137,7 @@ body {
 
 .list li {
     color: #86898f;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 .list li:nth-child(odd) {
@@ -155,4 +168,68 @@ body {
 
 .table td:nth-child(3) {
     color: #86898f;
+}
+.info {
+    display: flex;
+}
+
+/* .card h2 {
+    padding: 0;
+    margin: 0;
+} */
+
+/* h4 {
+    padding: 0;
+    margin: 0;
+} */
+
+.form {
+    /* text-align: center; */
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 0 30px;
+    background: #4d6dad68;
+}
+.form h2 {
+    text-align: center;
+}
+
+
+.form-group label {
+    display: block;
+    font-size: 14px;
+    color: #86898f;
+}
+
+.form-row {
+    margin-bottom: 10px;
+    display: flex;
+}
+
+.form-row .form-group {
+    width: 50%;
+    margin-right: 20px;
+    /* display: inline-block; */
+    /* width: calc(50% - 30px) */
+}
+
+ .form-row .form-group:last-child {
+    margin-right: 0;
+} 
+
+.form-group input, 
+.form-group textarea {
+    width: 100%;
+    box-sizing: border-box;
+    border: none;
+    background: transparent;
+    border-bottom: 1px solid #ccc;
+    color: #000;
+    padding: 15px 0 10px;
+    outline: none;
+    font-family: inherit;
+}
+.form-group input::placeholder, 
+.form-group textarea::placeholder {
+    color: #6a6a6a9b;
 }
