--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-
-
-
-
 body {
     margin: 0 auto;
     color: #0f141e;
@@ -18,8 +14,7 @@ body {
     font-style: italic;
     font-weight: bold;
     color: #86898f;
-    margin-bottom: 10px;
-    /* height: 200px; */
+    /* margin-bottom: 10px; */
 }
 
 .strong {
@@ -32,14 +27,23 @@ body {
     border: 1px solid grey;
     border-radius: 10px;
     padding: 0 30px;
-    margin-bottom: 35px;
-    /* text-align: center; */
+    margin-bottom: 15px;
+    }
+
+@media (max-width: 750px) {
+    .container {
+        font-size: 1rem;
+        padding: 10px;
+        /* text-align: center; */
+    }
+    .list {
+        text-align: left;
+    }
+
+  
 }
-.card h2 {
-    padding-top: 0;
-    margin-top: 0;
-    margin-bottom: 10px;
-}
+
+
 
 .bg-yellow {
     background: #fff9dc;
@@ -57,20 +61,11 @@ body {
     margin: auto;
     max-width: 750px;
     padding-top: 30px;
-    margin: auto;
 }
+
 .info {
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     display: flex;
-}
-.info-text {
-    margin-left: 10px;
-    margin-bottom: 10px;
-
-}
-
-.info-text h4 {
-    margin-bottom: 10px;
 }
 
 .avatar {
@@ -78,12 +73,29 @@ body {
     height: 200px;
     border-radius: 15px;
     box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
-    margin-bottom: 15px;
-
+    margin-bottom: 15px; 
+    margin-right: 15px;
 }
 
+@media (max-width: 150px) {
+    .avatar {
+        width: 110px;
+        height: 110px;
+    }
+}
+
+@media (max-width: 650px) {
+    .avatar {
+    height: 185px;
+    border-radius: 15px;
+    box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
+    margin-bottom: 15px;
+    }
+}
+
+
+
 .link {
-    /* border-style: none; */
     color: #000;
     text-decoration: none;
     padding: 0;
@@ -135,7 +147,7 @@ body {
 
 .list {
     margin: 0;
-    padding: 0 30px;
+    padding: 0;
     list-style: none;
 }
 
@@ -149,12 +161,17 @@ body {
 }
 
 .table {
-    width: 100%;
+    max-width: 100%;
+    font-size: 12px;
 }
 
-/* .table thead {
-    background: #91487232;
-} */
+@media (max-width: 400px) {
+   .table {
+    width: 100%;
+   font-size: 5px;
+   }
+
+};
 
 .table td {
     padding: 5px;
@@ -163,9 +180,6 @@ body {
     background: #91487232;
 }
 
-/* table td:nth-child(2) {
-    background: #f33a9734;
-} */
 .table td:nth-child(2) {
     color: #86898f;
 }
@@ -177,18 +191,7 @@ body {
     display: flex;
 }
 
-/* .card h2 {
-    padding: 0;
-    margin: 0;
-} */
-
-/* h4 {
-    padding: 0;
-    margin: 0;
-} */
-
 .form {
-    /* text-align: center; */
     border: 1px solid black;
     border-radius: 10px;
     padding: 0 30px;
@@ -213,8 +216,6 @@ body {
 .form-row .form-group {
     width: 50%;
     margin-right: 20px;
-    /* display: inline-block; */
-    /* width: calc(50% - 30px) */
 }
 
  .form-row .form-group:last-child {
@@ -238,17 +239,6 @@ body {
     color: #6a6a6a9b;
 }
 
-@media (max-width: 750px) {
-    .container {
-        font-size: 1rem;
-        padding: 10px;
-        text-align: center;
-    }
-
-    .card {
-        margin-bottom: 10px;
-    }
-}
 
 @media (max-width: 650px) {
     .info {
@@ -266,3 +256,25 @@ body {
         margin-bottom: 10px;
     }
 }
+
+.title2 {
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.title4 {
+    margin: 0;
+}
+
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+     }
+    ::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+      }
+    /* optional: show position indicator in red */
+    ::-webkit-scrollbar-thumb {
+    background: #FF0000;
+     }
