--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
     font-weight: normal;
 }
 
+
 .info-text p {
     font-size: 14px;
     font-style: italic;
@@ -26,9 +27,21 @@ body {
     
     border: 1px solid grey;
     border-radius: 10px;
-    padding: 0 30px;
+    padding: 20px;
     margin-bottom: 15px;
+
     }
+
+@media (max-width: 320px) {
+    .card {
+        padding: 5px; 
+    }
+    .card li {
+        text-align: center;
+    }
+}
+
+
 
 @media (max-width: 750px) {
     .container {
@@ -39,11 +52,7 @@ body {
     .list {
         text-align: left;
     }
-
-  
 }
-
-
 
 .bg-yellow {
     background: #fff9dc;
@@ -77,12 +86,24 @@ body {
     margin-right: 15px;
 }
 
-@media (max-width: 150px) {
+@media (max-width: 320px) {
     .avatar {
-        width: 110px;
-        height: 110px;
+        width: 100%;
+        height: auto;
+        object-fit: cover;
     }
 }
+@media (min-width: 321px) and (max-width: 650px) {
+    .info {
+        width: 100%;
+        max-width: 1200px; /* Максимальная ширина контейнера */
+        margin: 0 auto;
+        }
+        .info .avatar {
+        width: 100%;
+        height: auto;
+    }
+};
 
 @media (max-width: 650px) {
     .avatar {
@@ -92,8 +113,6 @@ body {
     margin-bottom: 15px;
     }
 }
-
-
 
 .link {
     color: #000;
@@ -114,7 +133,6 @@ body {
     color: rgb(73, 49, 195);
     opacity: 0.7;
 }
-
 
 .link-list {
     list-style: none;
@@ -168,9 +186,8 @@ body {
 @media (max-width: 400px) {
    .table {
     width: 100%;
-   font-size: 5px;
+   font-size: 9px;
    }
-
 };
 
 .table td {
@@ -194,13 +211,12 @@ body {
 .form {
     border: 1px solid black;
     border-radius: 10px;
-    padding: 0 30px;
+    padding: 20px;
     background: #4d6dad68;
 }
 .form h2 {
     text-align: center;
 }
-
 
 .form-group label {
     display: block;
@@ -238,7 +254,6 @@ body {
 .form-group textarea::placeholder {
     color: #6a6a6a9b;
 }
-
 
 @media (max-width: 650px) {
     .info {
