--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
     
     border: 1px solid grey;
     border-radius: 10px;
-    padding: 20px;
+    padding: 0 20px 20px 20px;
     margin-bottom: 15px;
 
     }
